@@ -1,5 +1,7 @@
 {{$NEXT}}
   - query_param_names, body_param_names, cookie_names, and upload_names now return names in the original request order
+  - Add set_response_body_buffer method
+  - Add file and handle render options
 
 0.008     2021-04-27 21:11:22 EDT
   - Fix parsing of empty multipart/form-data forms and some other edge cases
